--- a/.github/workflows/fmt.yml
+++ b/.github/workflows/fmt.yml
@@ -3,6 +3,8 @@ name: "Check formatting"
 on:
   pull_request:
   push:
+    branches:
+    - main
 
 permissions: {}
 
@@ -17,10 +19,15 @@ jobs:
         # Important to not change over time, so that CI won't
         # suddenly start failing once the formatter version is updated!
         nix_path: nixpkgs=https://github.com/NixOS/nixpkgs/archive/2d068ae5c6516b2d04562de50a58c682540de9bf.tar.gz
-    - name: Install nixfmt
-      run: nix-env -f '<nixpkgs>' -iA nixfmt
+    - name: Install treefmt and formatters
+      run: |
+        nix-env -f '<nixpkgs>' -iA treefmt2 nixfmt
+        if [[ ! -e treefmt.toml ]]; then
+          cat > treefmt.toml <<EOF
+        [formatter.nixfmt]
+        command = "nixfmt"
+        includes = ["*.nix"]
+        EOF
+        fi
     - name: Run treefmt
-      uses: isbecker/treefmt-action@v1
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        ci: true
+      run: treefmt --ci
