--- a/.github/workflows/fmt.yml
+++ b/.github/workflows/fmt.yml
@@ -21,7 +21,7 @@ jobs:
         nix_path: nixpkgs=https://github.com/NixOS/nixpkgs/archive/2d068ae5c6516b2d04562de50a58c682540de9bf.tar.gz
     - name: Install treefmt and formatters
       run: |
-        nix-env -f '<nixpkgs>' -iA treefmt2 nixfmt
+        nix-env -f '<nixpkgs>' -iA treefmt2 nixfmt-rfc-style
         if [[ ! -e treefmt.toml ]]; then
           cat > treefmt.toml <<EOF
         [formatter.nixfmt]
